--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.3
 pillow==10.2.0
+setuptools==70.0.0
 sympy==1.13.1
 torch==2.5.1+cpu
 torchaudio==2.5.1+cpu
